@@ -1,5 +1,5 @@
 /*******************************************************************************
-* Copyright (c) 2024-2025 Red Hat Inc. and others.
+* Copyright (c) 2024, 2025 Red Hat Inc. and others.
 *
 * This program and the accompanying materials are made available under the
 * terms of the Eclipse Public License v. 2.0 which is available at
@@ -30,6 +30,8 @@ import org.eclipse.lsp4j.WorkspaceSymbolLocation;
 import org.eclipse.lsp4j.jsonrpc.messages.Either;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.HashSet;
@@ -108,14 +110,14 @@ public class JaxRsWorkspaceSymbolParticipant implements IJavaWorkspaceSymbolsPar
 		return jaxrsTypes;
 	}
 
-	private static WorkspaceSymbol createSymbol(JaxRsMethodInfo methodInfo, IPsiUtils utils) throws MalformedURLException {
+	private static WorkspaceSymbol createSymbol(JaxRsMethodInfo methodInfo, IPsiUtils utils) throws MalformedURLException, URISyntaxException {
 		TextRange sourceRange = methodInfo.getJavaMethod().getNameIdentifier().getTextRange();
 		Range r = utils.toRange(methodInfo.getJavaMethod(), sourceRange.getStartOffset(), sourceRange.getLength());
 		Location location = new Location(methodInfo.getDocumentUri(), r);
 		Either<Location, WorkspaceSymbolLocation> eitherLocation = Either.forLeft(location);
 
 		StringBuilder nameBuilder = new StringBuilder("@");
-		URL url = new URL(methodInfo.getUrl());
+		URL url = new URI(methodInfo.getUrl()).toURL();
 		String path = url.getPath();
 		nameBuilder.append(path);
 		nameBuilder.append(": ");
